chore: hourly forecast item background

--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -42,13 +42,13 @@
   background: linear-gradient(
     171deg,
     #f88508 -12.41%,
-    rgba(246, 250, 217, 0) 163.32%
+    rgba(0,0,0, 1) 163.32%
   );
 }
 .night_bg {
   background: linear-gradient(
     168deg,
     #443d64 -19.21%,
-    rgba(101, 130, 198, 0) 158.48%
+    rgba(255,255,255,.5) 158.48%
   );
 }
